cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_57.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ofb64enc.c:32: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ofb64enc.c:32:5: Write of unused value
30.       iv = &(*ivec)[0];
31.       c2l(iv, v0);
32.       c2l(iv, v1);
          ^
33.       ti[0] = v0;
34.       ti[1] = v1;
